--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
-DATABASE='yourdatabaseurl'
-EMAIL='youremail@gmail.com';
-PASSWORD='yourpassword';
+DATABASE=mongodb+srv://github:Github5052@cluster0.z2rkxnh.mongodb.net/EmailOtp?retryWrites=true&w=majority
+EMAIL='goluchoudhary7808@gmail.com';
+PASSWORD='ykus ftfm fynr feln';
