--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
-DATABASE=mongodb+srv://github:Github5052@cluster0.z2rkxnh.mongodb.net/EmailOtp?retryWrites=true&w=majority
-EMAIL='goluchoudhary7808@gmail.com';
-PASSWORD='ykus ftfm fynr feln';
+DATABASE='url'
+EMAIL='abc@gmail.com';
+PASSWORD='abcdefghijklm';
